// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-icon Custom svg 1`] = `
<div>
  <!---->
   
  <p>
    Prop use-svg-sprite needs to be false if you want to see custom-svg
  </p>
</div>
`;

exports[`Storyshots modul-components|m-icon UseSvgSprite (false) 1`] = `<!---->`;

exports[`Storyshots modul-components|m-icon name (long) 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 15px;"
  >
    Current name: 
    <span
      style="color: red;"
    >
      m-svg__profile
    </span>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon name (short) 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 15px;"
  >
    Current name: 
    <span
      style="color: red;"
    >
      profile
    </span>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon sandbox 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
    class="error"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon showNameAsClass 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="20px"
    width="20px"
  >
    <!---->
     
    <use
      aria-hidden="true"
      class="profile"
    />
  </svg>
   
  <span
    style="margin-left: 15px;"
  >
    Current className on svg Icon: 
    <span
      style="color: red;"
    >
      profile
    </span>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon size 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="m-icon"
    height="30"
    width="30"
  >
    <!---->
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 15px;"
  >
    Current icon size: 
    <span
      style="color: red;"
    >
      30
    </span>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon svgTitle 1`] = `
<div>
  <svg
    class="m-icon"
    height="20px"
    width="20px"
  >
    <title>
      Title1
    </title>
     
    <use
      aria-hidden="true"
    />
  </svg>
   
  <span
    style="margin-left: 15px;"
  >
    Current svgTitle: 
    <span
      style="color: red;"
    >
      Title1
    </span>
  </span>
</div>
`;

exports[`Storyshots modul-components|m-icon/badge offsetX 1`] = `<div />`;

exports[`Storyshots modul-components|m-icon/badge offsetY 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  style="overflow: visible;"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon/badge state 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30px"
  style="overflow: visible;"
  width="30px"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;

exports[`Storyshots modul-components|m-icon/badge state, offsetY, offsetX 1`] = `
<svg
  aria-hidden="true"
  class="m-icon"
  height="30"
  style="overflow: visible;"
  width="30"
>
  <!---->
   
  <use
    aria-hidden="true"
  />
</svg>
`;
